Bugfix examples bibtex

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,16 +1,21 @@
 # Latex compiler to use
-LT = pdflatex -interaction batchmode
+LT = pdflatex -interaction nonstopmode
 BIBTEX = bibtex
 
 # All pdfs to generate
 PDFS=MFHposter.pdf MFHiwrPresentation.pdf
 
-.PHONY : all
+pdf: $(PDFS)
 
-all: $(PDFS)
+all: pdf
+
+clean:
+	rm -f $(PDFS) *.aux *.log *.nav *.out *.snm *.toc
 
 %.pdf : %.tex
 	$(LT) $*.tex
-	$(BIBTEX) $*.tex || true
+	$(BIBTEX) $* || true
 	$(LT) $*.tex
 	$(LT) $*.tex
+
+.PHONY : all clean pdf
